--- a/src/pages/Budgets/styles.module.scss
+++ b/src/pages/Budgets/styles.module.scss
@@ -3,4 +3,49 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        background-color: var(--gray-200);
+        padding: 2rem 5rem;
+        border-radius: 50px;
+        width: 50%;
+
+        @media (max-width: 730px) {
+            padding: 1rem 3rem;
+        }
+
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+
+            @media (max-width: 730px) {
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+            
+            h4 {
+                align-self: flex-start;
+                color: var(--text-color-dark);
+                @media (max-width: 730px) {
+                    font-size: 1.8rem;
+                    align-self: center;
+                }
+            }
+
+            button {
+                align-self: flex-end;
+                background-color: var(--bg-dark);
+
+                @media (max-width: 730px) {
+                    align-self: center;
+                    width: 100%;
+                }
+            }
+        }
+    }
 }
