--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,6 +1,31 @@
-.homePage {
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: 600px) {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 1.5rem;
+    }
+}
+
+.content {
     height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .cards {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        gap: 2rem;
+
+        @media (max-width: 730px) {
+            flex-direction: column;
+        }
+
+    }
 }
