--- a/src/pages/shared/styles.module.scss
+++ b/src/pages/shared/styles.module.scss
@@ -1,11 +1,18 @@
 .layout {
-    background-color: var(--bg-dark);
     display: flex;
     height: 100vh;
     max-width: 100vw;
 
     .page {
-        height: 100%;
         width: 100%;
+        padding: 5rem 10rem;
+    
+        @media (max-width: 990px) {
+            padding: 5rem 5rem;
+        }
+
+        @media (max-width: 820px) {
+            padding: 5rem 2rem;
+        }
     }
 }
